--- a/src/frontend/css/inputPage.css
+++ b/src/frontend/css/inputPage.css
@@ -14,6 +14,7 @@
     background-color: rgb(65, 60, 60);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    padding: 2px;
 }
 
 /*bigger desc input field pt1*/
@@ -32,6 +33,22 @@ input {
     width: 100%;
 }
 
+#submit-btn {
+    margin-top: 10px;
+    border: 2px solid black;
+    border-radius: 5px;
+
+    background-color: rgb(185, 176, 193);
+    color: black;
+    height: 5vh;
+    width: 10vw;
+}
+
+#submit-btn:hover {
+    background-color: aliceblue;
+    color: black;
+}
+
 @media only screen and (min-width: 600px) {
 
     /*justify items + align items and inputs-grid's margin
@@ -39,10 +56,11 @@ input {
     'place-items: center' limits inputs-grid too much*/
     .form {
         border-radius: 2px;
-        width: 50%;
+        width: 40%;
         display: grid;
         justify-items: stretch;
-        align-items: center;
+        align-items: start;
+        padding-top: 5vh;
     }
 
     .inputs-grid {
