--- a/src/frontend/css/outputPage.css
+++ b/src/frontend/css/outputPage.css
@@ -1,6 +1,7 @@
 * {
     /*avoid clipping*/
     box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .result-box {
@@ -27,6 +28,10 @@
     text-align: left;
     margin-left: 2%;
     flex: 1;
+}
+
+.result-box ul {
+    margin-right: 5%;
 }
 
 .trafficlight {
