--- a/src/frontend/css/inputPage.css
+++ b/src/frontend/css/inputPage.css
@@ -4,30 +4,44 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.form {
+.form-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: rgb(104, 105, 110);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    width: 70vw;
-    height: auto;
-    /* margin: 0 auto; */
-    margin-top: 5%;
-    margin-bottom: 5%;
-    padding-bottom: 2%;
+
+    min-width: 80vw;
+    min-height: 60vh;
+    max-height: 85vh;
+    padding-bottom: 5%;
+}
+
+.form {
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    min-height: 0;
+    min-width: 70vw;
+    border-radius: 2px;
 }
 
 .inputs-grid {
+    max-width: 100%;
+    max-height: 100%;
     background-color: rgb(65, 60, 60);
+
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 2px;
 }
 
-.inputs-grid-copy {
+/* unneeded ? */
+/* .inputs-grid-copy {
     background-color: rgb(65, 60, 60);
     display: grid;
     grid-column: span 1.5;
     grid-template-columns: repeat(2, 1fr);
-}
+} */
 
 /*-------- Errors! ---------*/
 
@@ -48,15 +62,15 @@
 /*-------- ------ ---------*/
 
 /*bigger fields pt1*/
-/*lead applicant id field*/
-.applicantID {
-    /* span across all columns */
+/* lead applicant id field// Unneeded ?*/
+/* .applicantID {
     grid-column: 1/-1;
-}
+} */
 
 /*member id field*/
 .memberID {
     grid-column: 1/-1;
+    width: 100%;
 }
 
 /*Project description*/
@@ -69,16 +83,8 @@
 /*bigger height for project desciption*/
 #desc-input {
     min-height: 70px;
-    margin-bottom: 5px;
+    margin: 0;
 }
-
-/*members' description
- Separate from .desc-box
-  bcause of del-btn*/
-.member-desc {
-    width: 150%;
-}
-
 
 /* All textareas, unless spesified elsewhere*/
 .desc-textarea {
@@ -99,9 +105,9 @@ input {
     width: 100%;
 }
 
-.buttons {
+/* .buttons {
     gap: 20px;
-}
+} */
 
 #submit-btn {
     margin-top: 10px;
@@ -121,7 +127,8 @@ input {
 
 #add-btn {
     font-size: x-large;
-    display: grid;
+    /* display: grid; */
+    display: flex;
     margin-top: 2%;
     margin-left: 10px;
     width: 40px;
@@ -174,21 +181,22 @@ input {
 
 @media only screen and (min-width: 600px) {
 
+    .form-wrapper {
+        min-width: 70vw;
+        min-height: 60vh;
+        max-height: 85vh;
+    }
+
     /*justify items + align items and inputs-grid's margin
     makes centering items possible! 
     'place-items: center' limits inputs-grid too much*/
     .form {
-        border-radius: 2px;
-        width: 40%;
-        display: grid;
-        justify-items: stretch;
-        align-items: start;
+        min-width: 80%;
         padding-top: 5vh;
     }
 
     .inputs-grid {
-        max-width: 85%;
-        margin: 0 auto;
+        max-width: 100%;
     }
 
     #add-btn {
@@ -203,5 +211,12 @@ input {
     /*copy's desc*/
     .member-desc {
         width: 170%;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+
+    .form {
+        min-width: 80%;
     }
 }
