--- a/src/frontend/css/outputPage.css
+++ b/src/frontend/css/outputPage.css
@@ -4,49 +4,91 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.result-box {
+.output-form {
+    color: #000000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: #9da181;
+
+    width: 90vw;
+    max-height: 80vh;
+    --result-gap: 0.75rem;
+
+    margin-top: 5%;
+    margin-bottom: 5%;
+    padding-bottom: 2%;
+    border-radius: 2px;
+    gap: var(--result-gap);
+}
+
+.scroll-container {
+    /*flex for gap*/
+    display: flex;
+    flex-direction: column;
+
+    overflow-y: auto;
+    padding: 5px;
+    gap: var(--result-gap);
+}
+
+.test-cont {
+    gap: 20px;
+}
+
+.output-form>h2 {
+    padding: 5px;
+}
+
+/*without this straffic lishts wont be shown as row*/
+.trafficlights-container {
     display: flex;
     align-items: center;
-    gap: 1rem;
-    margin: 2%;
-    padding: 10px;
+    justify-content: center;
+    background-color: #ff1900;
+}
 
-    background-color: rgb(104, 105, 110);
+.result-container {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    gap: var(--result-gap);
+}
 
-    /* width: 60vw; */
-    min-height: 10vh;
+.bg-color {
+    color: #000000;
+    background-color: #dfded7;
+    padding: 5%;
+    width: 70vw;
     border-radius: 5px;
 }
 
-.result-box p {
-    text-align: left;
-    margin-left: 10%;
+.result-container>.bg-color {
+    flex: 1 1 calc(50% - var(--result-gap));
+    min-width: 260px;
+}
+
+.bg-color h3 {
     flex: 1;
 }
 
-.result-box h3 {
-    text-align: left;
-    margin-left: 2%;
-    flex: 1;
-}
 
-.result-box ul {
-    margin-right: 5%;
-}
+/*TRAFFIC LiGHTS below*/
+/*singular light in trafficlights*/
 
 .trafficlight {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    align-self: center;
 
     gap: 5px;
-    margin-right: 10%;
-    padding: 1%;
-
+    padding: 6%;
     background-color: #303030;
 
 }
 
-/*singulat light in trafficlights*/
 .dot {
     height: 20px;
     width: 20px;
@@ -78,4 +120,27 @@
 
 .dot.red {
     background: #ff1900;
+}
+
+@media only screen and (min-width: 600px) {
+
+    .output-form {
+        width: 70vw;
+    }
+
+    .bg-color {
+        max-width: 60vw;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+
+    .output-form {
+        width: 60%;
+    }
+
+    .bg-color {
+        min-width: 50vw;
+        max-width: 50vw;
+    }
 }
