--- a/src/frontend/css/outputPage.css
+++ b/src/frontend/css/outputPage.css
@@ -1,44 +1,10 @@
+/*----------Output spesific-----------------------*/
+
 * {
     /*avoid clipping*/
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.output-form {
     color: #000000;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    background-color: #9da181;
-
-    width: 90vw;
-    max-height: 80vh;
-    --result-gap: 0.75rem;
-
-    margin-top: 5%;
-    margin-bottom: 5%;
-    padding-bottom: 2%;
-    border-radius: 2px;
-    gap: var(--result-gap);
-}
-
-.scroll-container {
-    /*flex for gap*/
-    display: flex;
-    flex-direction: column;
-
-    overflow-y: auto;
-    padding: 5px;
-    gap: var(--result-gap);
-}
-
-.test-cont {
-    gap: 20px;
-}
-
-.output-form>h2 {
-    padding: 5px;
 }
 
 /*without this straffic lishts wont be shown as row*/
@@ -46,45 +12,52 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #ff1900;
+    /* background-color: #ff1900; */
+    gap: 10%;
 }
 
 .result-container {
     display: flex;
     flex-direction: column;
     flex: 1;
-    gap: var(--result-gap);
+    gap: 20px;
 }
 
-.bg-color {
-    color: #000000;
-    background-color: #dfded7;
-    padding: 5%;
-    width: 70vw;
-    border-radius: 5px;
+.eval-container {
+    background-color: #c3df8e;
+    width: 95%;
+    align-self: center;
+    border-radius: 3px;
+    box-shadow: 0 0 6px #000000;
 }
 
-.result-container>.bg-color {
-    flex: 1 1 calc(50% - var(--result-gap));
-    min-width: 260px;
+.feedback-container {
+    background-color: #c3df8e;
+    width: 95%;
+    align-self: center;
+    border-radius: 3px;
+    box-shadow: 0 0 3px #000000;
+    margin-bottom: 5%;
 }
-
-.bg-color h3 {
-    flex: 1;
-}
-
 
 /*TRAFFIC LiGHTS below*/
 /*singular light in trafficlights*/
-
-.trafficlight {
+.trafficlight-items {
     display: flex;
     flex-direction: column;
     align-items: center;
-    align-self: center;
+    justify-content: center;
+}
+
+.trafficlights {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
     gap: 5px;
-    padding: 6%;
+    padding: 10%;
+    width: 50px;
     background-color: #303030;
 
 }
@@ -97,13 +70,13 @@
 }
 
 /*3 traffic light -base */
-.trafficlight .dot {
+.trafficlights .dot {
     opacity: 0.25;
     /* transition: opacity 120ms ease, transform 120ms ease; */
 }
 
 /*3 traffic lights -active color*/
-.trafficlight .dot.active {
+.trafficlights .dot.active {
     opacity: 1;
     /* transform: scale(1.05); */
     box-shadow: 0 0 6px #000000;
@@ -127,20 +100,11 @@
     .output-form {
         width: 70vw;
     }
-
-    .bg-color {
-        max-width: 60vw;
-    }
 }
 
 @media only screen and (min-width: 900px) {
 
     .output-form {
         width: 60%;
-    }
-
-    .bg-color {
-        min-width: 50vw;
-        max-width: 50vw;
     }
 }
