--- a/src/frontend/css/base.css
+++ b/src/frontend/css/base.css
@@ -18,6 +18,7 @@
     min-height: 60vh;
     max-height: 85vh;
     border-radius: 3px;
+    box-shadow: 0 0 2px #000000;
 }
 
 .form {
@@ -27,6 +28,8 @@
     min-width: 80%;
     max-height: 60vh;
     border-radius: 2px;
+    /*padding here to make sure error:focus at inputPage.css shows well*/
+    padding: 5px;
 
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
@@ -36,6 +39,28 @@
 
 .form-wrapper h2 {
     padding: 10px;
+}
+
+/*custom scrollbar*/
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    max-height: 10%;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 @media only screen and (min-width: 600px) {
