Localization, dark/light theme & financial data input box fix
- Couldn't paste data to the kauppalehti box, so made a "temp" fix for that
- Added finnish "localization"
- Added a darktheme option

--- a/src/frontend/css/outputPage.css
+++ b/src/frontend/css/outputPage.css
@@ -7,6 +7,11 @@
     color: #000000;
 }
 
+span, h1, h2, h3, h4, h5, h6, p, label {
+    font-weight: bold;
+    color: black;
+}
+
 /*without this straffic lishts wont be shown as row*/
 .trafficlights-container {
     display: flex;
