--- a/src/frontend/css/base.css
+++ b/src/frontend/css/base.css
@@ -6,13 +6,27 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/*--- themes ---*/
+:root {
+    --form-bg: #aad4c7;
+    --text-color: #000000;
+}
+
+/*--- Dark theme ---*/
+[data-theme="dark"] {
+    --form-bg: #464c57;
+    --text-color: #efefef;
+}
+
+/*-------------------------*/
+
 .form-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-    background-color: rgb(230, 225, 191);
+    background-color: var(--form-bg);
 
     width: 80vw;
     min-height: 60vh;
