small css changes
all css variants of in/output are now in base.css

outputpage.css divs now have same border-box (5px)

--- a/src/frontend/css/base.css
+++ b/src/frontend/css/base.css
@@ -10,12 +10,18 @@
 :root {
     --form-bg: #aad4c7;
     --text-color: #000000;
+    --inputsgrid-bg: #c3df8e;
+    --input-text-color: #000000;
+    --button-bg: rgb(185, 176, 193);
 }
 
 /*--- Dark theme ---*/
 [data-theme="dark"] {
     --form-bg: #464c57;
     --text-color: #efefef;
+    --inputsgrid-bg: #4a4a4a;
+    --input-text-color: #000000;
+    --button-bg: #555555;
 }
 
 /*-------------------------*/
