--- a/src/frontend/css/base.css
+++ b/src/frontend/css/base.css
@@ -3,10 +3,9 @@
 * {
     /*avoid clipping*/
     box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-/*--- themes ---*/
+
 :root {
     --form-bg: #aad4c7;
     --text-color: #000000;
@@ -29,13 +28,13 @@
 .form-wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 
     background-color: var(--form-bg);
 
     width: 80vw;
-    min-height: 60vh;
+    min-height: 50vh;
     max-height: 85vh;
     border-radius: 3px;
     box-shadow: 0 0 2px #000000;
@@ -44,6 +43,8 @@
 .form {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-self: center;
 
     min-width: 80%;
     max-height: 60vh;
@@ -53,8 +54,6 @@
 
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
-
-    gap: 20px;
 }
 
 .form-wrapper h2 {
@@ -86,10 +85,12 @@
 @media only screen and (min-width: 600px) {
     .form-wrapper {
         width: 70vw;
-        min-height: 70vh;
+        min-height: 60vh;
+        max-height: 90vh;
     }
 
     .form {
+        margin-top: 20px;
         min-width: 80%;
         max-height: 70vh;
     }
