--- a/src/frontend/css/outputPage.css
+++ b/src/frontend/css/outputPage.css
@@ -26,6 +26,10 @@ label {
     gap: 20px;
 }
 
+ul li {
+    list-style-type: none;
+}
+
 /*without this straffic lishts wont be shown as row*/
 .trafficlights-container {
     display: flex;
