--- a/src/frontend/css/inputPage.css
+++ b/src/frontend/css/inputPage.css
@@ -105,6 +105,7 @@ button {
     color: var(--input-text-color);
     font-size: x-large;
     display: flex;
+    align-items: center;
 
     margin-top: 2%;
     margin-left: 10px;
@@ -117,6 +118,8 @@ button {
 #del-btn {
     font-size: x-large;
     color: var(--input-text-color);
+    display: flex;
+    align-items: center;
     grid-column: 2;
 
     width: 36px;
