--- a/src/frontend/css/base.css
+++ b/src/frontend/css/base.css
@@ -22,8 +22,8 @@
     --text-color: #efefef;
     --inputsgrid-bg: #4a4a4a;
     --input-text-color: #000000;
-    --button-bg: #555555;
-    --button-bg2: #5c5f60;
+    --button-bg: #717475;
+    --button-bg2: #717475;
     --button-bg2-hover: #323632;
 }
 
