Small style changes to form and about page

--- a/src/frontend/css/aboutPage.css
+++ b/src/frontend/css/aboutPage.css
@@ -22,7 +22,10 @@
   padding: 1rem;
 }
 
-.about-page ol,
+.about-page ul li {
+  list-style-type: disc;
+}
+
 .about-page li {
   list-style-position: outside;
   padding-left: 1.5em;
